Cleaned up CSS and fixed scrollbar issue

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,1 +1,38 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}html{line-height:1}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:none}q:before,q:after,blockquote:before,blockquote:after{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}.sitenav-list a{display:inline-block;text-align:center;padding:0.625em 1.25em;border:0;font-size:1.25em;cursor:pointer;background:#ae81ff;color:#e6db74}.sitenav-list a:hover,.sitenav-list a:focus{background:#be9bff;color:#eae18a;box-shadow:0 0 3px 0 #e6db74;transition:0.25s}.sitenav-list a:active{background:#9e68ff;color:#e2d55e}.sitenav-list a:visited{color:#e6db74}.page_container:after,.sitenav:after{content:" ";display:table;clear:both}body{font-family:"Open Sans",sans-serif;font-weight:inherit;text-transform:none}.sitenav-list a,h1,h2,h3,.sitenav-uri,h4,h5,h6,.sitenav-desc{font-family:"Bitter",serif;font-weight:bold;text-transform:none}code{font-family:"Source Code Pro",monospace;font-weight:medium;text-transform:none}body{color:#e6db74}code{color:#f92672}h1,h2,h3,.sitenav-uri,h4,h5,h6,.sitenav-desc{color:#a6e22a}a,a:visited{color:#ae81ff}a:hover,a:focus,a:active,a:visited:hover,a:visited:focus,a:visited:active{color:#8d4eff}body{font-size:16px}small{font-size:80%}body{line-height:1.2}h1,h2,h3,.sitenav-uri,h4,h5,h6,.sitenav-desc,li{line-height:1.3}h1,h2,h3,.sitenav-uri,h4,h5,h6,.sitenav-desc{margin-top:0.625em}h1{font-size:2.25em}h2{font-size:1.875em;margin-top:1.25em}h3,.sitenav-uri{font-size:1.5em}h4{font-size:1.25em}h5{font-size:1.1em}h6,.sitenav-desc{font-size:1em}header,main,footer,p{margin-bottom:1.25em}h1,ol,ul{margin-bottom:0.625em}h2,h3,.sitenav-uri,h4,h5,h6,.sitenav-desc,li{margin-bottom:0.3125em}*{-moz-box-sizing:border-box;box-sizing:border-box}body{margin:0;background-color:#383830}header{background-color:#26261e}@media screen and (min-width: 1025px){main{min-height:800px}}footer{background-color:#26261e}ol,ul{margin-left:1.25em;padding-left:0.625em}ol{list-style:decimal}ul{list-style:disc outside}em{font-style:italic}strong{font-weight:bold}a,a:visited{text-decoration:none}pre{margin-top:-0.625em;margin-bottom:0.625em}pre>code{margin-left:1.25em;padding:0.625em;display:inline-block}.page_container{padding:0 0.625em;max-width:1400px;margin:0 auto}.sitenav{max-width:600px}.sitenav-uri{display:inline-block;margin-top:0}.sitenav-desc{display:inline-block;margin-left:0.625em;margin-top:0}.sitenav-list{display:flex;flex-direction:row;flex-wrap:nowrap;justify-content:space-between}.sitenav-list a{padding:0.625em 0.15625em;margin-left:0.15625em;flex:1}@media screen and (min-width: 1025px){.sitenav-list a{margin-left:0.3125em}}
+/*
+Sass::SyntaxError: ".sitenav" failed to @extend "%clearfix".
+The selector "%clearfix" was not found.
+Use "@extend %clearfix !optional" if the extend should be able to fail.
+
+
+Backtrace:
+/home/rakelley/PersonalProjects/ownsite/public/css/sass/components/widgets/_sitenav.scss:2
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/tree/visitors/extend.rb:61:in `block in check_extends_fired!'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/util/subset_map.rb:106:in `block in each_value'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/util/subset_map.rb:106:in `each'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/util/subset_map.rb:106:in `each_value'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/tree/visitors/extend.rb:50:in `check_extends_fired!'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/tree/visitors/extend.rb:16:in `visit'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/tree/root_node.rb:39:in `css_tree'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/tree/root_node.rb:20:in `render'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/engine.rb:268:in `render'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:17:in `block in render'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:29:in `with_import_scope'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:16:in `render'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/plugin/compiler.rb:209:in `each'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/lib/sass/plugin/compiler.rb:328:in `block in watch'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/vendor/listen/lib/listen/listener.rb:252:in `call'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/vendor/listen/lib/listen/listener.rb:252:in `on_change'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/vendor/listen/lib/listen/adapter.rb:254:in `call'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/vendor/listen/lib/listen/adapter.rb:254:in `report_changes'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/vendor/listen/lib/listen/adapter.rb:323:in `poll_changed_directories'
+/home/rakelley/.rvm/gems/ruby-2.2.1@rakelley_site/gems/sass-3.4.14/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Sass::SyntaxError: \".sitenav\" failed to @extend \"%clearfix\".\A The selector \"%clearfix\" was not found.\A Use \"@extend %clearfix !optional\" if the extend should be able to fail.\A "; }
