--- a/public/css/sass/layout/_containers.scss
+++ b/public/css/sass/layout/_containers.scss
@@ -1,7 +1,6 @@
 
 //main container for all body children
 .page_container {
-  @extend %clearfix;
   padding: 0 $spacer / 2;
   max-width: 1400px;
   margin: 0 auto;
